[tool.poetry]
name = "runner-default"
version = "0.0.0"
description = "Default runner environment for the beet bot."
authors = ["Valentin Berlier <berlier.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "*"
beet = "*"
lectern = "*"
mecha = "*"
bolt = "*"
bolt-expressions = "*"
minecraft-text-components = "*"
wicked-expressions = "*"
beet-plugins = { git = "https://github.com/TheWii/beet-plugins.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
