[project]
name = "runner-default"
version = "0.1.0"
description = "Default runner environment for the beet bot"

requires-python = ">=3.14"
dependencies = [
    "beet>=0.0.0b1",
    "lectern>=0.0.0b1",
    "mecha>=0.0.0b1",
    "bolt>=0.0.0b1",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
